--- a/config/tables.yml
+++ b/config/tables.yml
@@ -1,2 +1,2 @@
 parameters:
-    dmzx.memberprofileviews.table: %core.table_prefix%memberprofileviews
+    dmzx.memberprofileviews.table: '%core.table_prefix%memberprofileviews'
