--- a/config/services.yml
+++ b/config/services.yml
@@ -1,8 +1,8 @@
 imports:
-    - { resource: tables.yml }
+    - { resource: 'tables.yml' }
 services:
     dmzx.memberprofileviews.listener:
-        class: dmzx\memberprofileviews\event\listener
+        class: 'dmzx\memberprofileviews\event\listener'
         arguments:
             - '@config'
             - '@user'
@@ -13,8 +13,8 @@ services:
             - '%core.php_ext%'
             - '%dmzx.memberprofileviews.table%'
         tags:
-            - { name: event.listener }
+            - { name: 'event.listener' }
     dmzx.memberprofileviews.acplistener:
-        class: dmzx\memberprofileviews\event\acp_listener
+        class: 'dmzx\memberprofileviews\event\acp_listener'
         tags:
-            - { name: event.listener }            
+            - { name: 'event.listener' }
